Add refactoring topic to Building an API series (#126)
Adds new Refactoring topic between the existing "Testing" and "One-to-Many" topics in the Building an API series. 

Squashed commits:
* Add first draft of 'What is Refactoring' lesson and start on 'Extracting Helper Functions' lesson
* Fix image link, tweak some wording
* Add refactoring topic to config.yaml. Finish draft of to_dict lesson and start from_dict lesson.
* Small changes for separating to_dict lesson and from_dict lesson
* Tweaks to goal descriptions for clarity
* Finish draft of extracting helper functions pt. 2 & small tweaks to wording or catching typos in prev lessons
* Typo fixes & wording tweaks, add start of Refactoring validate_book
* Finish draft of 'Refactoring Validate Book' lesson
* update copied challenge ids
* Apply suggested changes from code review
* Small wording updates based on review
* Add comments above to_dict tests to clarify what cases they apply to
* Add a couple challenges and clarifications from PR review

--- a/config.yaml
+++ b/config.yaml
@@ -417,6 +417,29 @@ Standards:
         UID: L00UOa
         Path: /api-6-testing/activity-solar-testing.md
   -
+    Title: 07) Building an API - Refactoring
+    Description: "What is Refactoring?, Extracting Helper Functions Pt. 1, Extracting Helper Functions Pt. 2, Refactor validate_book"
+    UID: 11960148-2005-4ce6-b12d-c9f788667408
+    SuccessCriteria:
+      - success criteria
+    ContentFiles:
+      -
+        Type: Lesson
+        UID: 55cb7e64-9a4f-47f5-bc7d-162e38257f06
+        Path: /api-7-refactoring/what-is-refactoring.md
+      -
+        Type: Lesson
+        UID: 66f19557-3680-4552-bb9b-440ea22d0c21
+        Path: /api-7-refactoring/extracting-helper-functions-to-dict.md
+      -
+        Type: Lesson
+        UID: 66f19557-3680-4552-bb9b-440ea22d0c22
+        Path: /api-7-refactoring/extracting-helper-functions-from-dict.md
+      -
+        Type: Lesson
+        UID: 66f19557-3680-4552-bb9b-440ea22d0c23
+        Path: /api-7-refactoring/refactor-validate-book.md
+  -
     Title: 07) Building an API - One-to-Many Relationships
     Description: "One-to-Many: Authors, Nested Routes"
     UID: 11960148-2005-4ce6-b12d-c9f788667407
