--- a/config.yaml
+++ b/config.yaml
@@ -371,6 +371,10 @@ Standards:
         Path: /api-5-more-queries/query-params.md
       -
         Type: Lesson
+        UID: 4d62482a
+        Path: /api-5-more-queries/problem-set-query-params.md
+      -
+        Type: Lesson
         UID: 2cfe7232-9dd4-4efe-8d33-9a4539ec3c63
         Path: /api-5-more-queries/activity-solar-query-params.md
   -
