--- a/config.yaml
+++ b/config.yaml
@@ -512,6 +512,10 @@ Standards:
           Type: Lesson
           UID: 13d46c9e-fe8f-4091-a930-d29676535e9d
           Path: /api-10-many-to-many/routes-many-to-many.md
+        -
+          Type: Lesson
+          UID: 694314b9-e0c5-4e79-9dd1-9a26e64afcad
+          Path: /api-10-many-to-many/problem-set-many-to-many.md
   -
     Title: Unit Wrap Up
     Description: "Activity: Mind Map"
