--- a/config.yaml
+++ b/config.yaml
@@ -449,7 +449,7 @@ Standards:
         Path: /api-7-refactoring/problem-set-refactoring.md
   -
     Title: 08) Building an API - One-to-Many Relationships
-    Description: "One-to-Many: Authors, Nested Routes"
+    Description: "One-to-Many: Authors, Nested Routes, D.R.Y.ing our routes"
     UID: 11960148-2005-4ce6-b12d-c9f788667407
     SuccessCriteria:
       - success criteria
