Building an API pt. 8 - lesson 3: New lesson - D.R.Ying Up Our Routes (#172)
* Add comparing code and refactoring model creation sections

* Add new 8.3 lesson to config

* Add new lesson to config for preview + small formatting adjustments after initial preview

* Write get_models_with_filters refactor section

* Small updates & typo fixes, add CFU questions

* Small wording update

* Fix small typos and update wordings for clarity afdter preview

* Update api-8-relationships-in-sqlalchemy/drying-our-routes.md

* Update config to add new lesson to Pt. 8 summary. Change CFU explanations into numbered lists. Add period to the Y in lesson title

* Add spacing before drop downs so they aren't so tightly against the preceeding paragraph

--- a/config.yaml
+++ b/config.yaml
@@ -449,7 +449,7 @@ Standards:
         Path: /api-7-refactoring/problem-set-refactoring.md
   -
     Title: 08) Building an API - One-to-Many Relationships
-    Description: "One-to-Many: Authors, Nested Routes"
+    Description: "One-to-Many: Authors, Nested Routes, D.R.Y.ing our routes"
     UID: 11960148-2005-4ce6-b12d-c9f788667407
     SuccessCriteria:
       - success criteria
@@ -462,6 +462,10 @@ Standards:
         Type: Lesson
         UID: 66f19557-3680-4552-bb9b-440ea22d0c20
         Path: /api-8-relationships-in-sqlalchemy/nested-routes-in-flask.md
+      -
+        Type: Lesson
+        UID: 66f19557-3680-4552-bb9b-440ea859d0c2
+        Path: /api-8-relationships-in-sqlalchemy/drying-our-routes.md
       -
         Type: Lesson
         UID: d93cf7bd-3239-4a58-b9d4-d6c5cc6d581f
